// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Environment empty global graphcool rc 1`] = `
Array [
  Cluster {
    "baseUrl": "https://graphcool-eu1.graphcool.cloud",
    "clusterSecret": undefined,
    "local": false,
    "name": "graphcool-eu1",
  },
  Cluster {
    "baseUrl": "https://graphcool-us1.graphcool.cloud",
    "clusterSecret": undefined,
    "local": false,
    "name": "graphcool-us1",
  },
  Cluster {
    "baseUrl": "https://database-beta.graph.cool",
    "clusterSecret": undefined,
    "local": false,
    "name": "shared-public-demo",
  },
]
`;

exports[`Environment interpolates env vars 1`] = `
Array [
  Cluster {
    "baseUrl": "https://graphcool-eu1.graphcool.cloud",
    "clusterSecret": undefined,
    "local": false,
    "name": "graphcool-eu1",
  },
  Cluster {
    "baseUrl": "https://graphcool-us1.graphcool.cloud",
    "clusterSecret": undefined,
    "local": false,
    "name": "graphcool-us1",
  },
  Cluster {
    "baseUrl": "https://database-beta.graph.cool",
    "clusterSecret": undefined,
    "local": false,
    "name": "shared-public-demo",
  },
]
`;

exports[`Environment loads multiple cluster definitions correctly + gives cluster by name 1`] = `
Array [
  Cluster {
    "baseUrl": "https://graphcool-eu1.graphcool.cloud",
    "clusterSecret": undefined,
    "local": false,
    "name": "graphcool-eu1",
  },
  Cluster {
    "baseUrl": "https://graphcool-us1.graphcool.cloud",
    "clusterSecret": undefined,
    "local": false,
    "name": "graphcool-us1",
  },
  Cluster {
    "baseUrl": "https://database-beta.graph.cool",
    "clusterSecret": undefined,
    "local": false,
    "name": "shared-public-demo",
  },
]
`;

exports[`Environment loads multiple cluster definitions correctly + gives cluster by name 2`] = `undefined`;

exports[`Environment non-existent global graphcool rc 1`] = `
Array [
  Cluster {
    "baseUrl": "https://graphcool-eu1.graphcool.cloud",
    "clusterSecret": undefined,
    "local": false,
    "name": "graphcool-eu1",
  },
  Cluster {
    "baseUrl": "https://graphcool-us1.graphcool.cloud",
    "clusterSecret": undefined,
    "local": false,
    "name": "graphcool-us1",
  },
  Cluster {
    "baseUrl": "https://database-beta.graph.cool",
    "clusterSecret": undefined,
    "local": false,
    "name": "shared-public-demo",
  },
]
`;

exports[`Environment persists .graphcoolrc correctly 1`] = `
"graphcool-1.0:
  clusters:
    cluster:
      host: 'http://localhost:60000'
      clusterSecret: ''
"
`;

exports[`Environment persists .graphcoolrc correctly 2`] = `
Array [
  Cluster {
    "baseUrl": "https://graphcool-eu1.graphcool.cloud",
    "clusterSecret": undefined,
    "local": false,
    "name": "graphcool-eu1",
  },
  Cluster {
    "baseUrl": "https://graphcool-us1.graphcool.cloud",
    "clusterSecret": undefined,
    "local": false,
    "name": "graphcool-us1",
  },
  Cluster {
    "baseUrl": "https://database-beta.graph.cool",
    "clusterSecret": undefined,
    "local": false,
    "name": "shared-public-demo",
  },
  Cluster {
    "baseUrl": "http://localhost:60000",
    "clusterSecret": "",
    "local": true,
    "name": "cluster",
  },
]
`;

exports[`Environment sets the platform token correctly 1`] = `
Array [
  Cluster {
    "baseUrl": "https://graphcool-eu1.graphcool.cloud",
    "clusterSecret": undefined,
    "local": false,
    "name": "graphcool-eu1",
  },
  Cluster {
    "baseUrl": "https://graphcool-us1.graphcool.cloud",
    "clusterSecret": undefined,
    "local": false,
    "name": "graphcool-us1",
  },
  Cluster {
    "baseUrl": "https://database-beta.graph.cool",
    "clusterSecret": undefined,
    "local": false,
    "name": "shared-public-demo",
  },
]
`;

exports[`graphcool definition dont load yml with secret and env var in args 1`] = `[Error: Please either provide a secret in your graphcool.yml or disableAuth: true]`;

exports[`graphcool definition load basic yml, provide cluster 1`] = `
Object {
  "cluster": "local",
  "datamodel": Array [
    "datamodel.graphql",
  ],
  "schema": "schemas/database.graphql",
  "secret": "some-secret",
  "service": "jj",
  "stage": "dev",
}
`;

exports[`graphcool definition load basic yml, provide cluster 2`] = `undefined`;

exports[`graphcool definition load yml with disableAuth: true 1`] = `
Object {
  "cluster": "local",
  "datamodel": Array [
    "datamodel.graphql",
  ],
  "disableAuth": true,
  "schema": "schemas/database.graphql",
  "service": "jj",
  "stage": "dev",
}
`;

exports[`graphcool definition load yml with disableAuth: true 2`] = `null`;

exports[`graphcool definition load yml with injected env var 1`] = `
Object {
  "cluster": "local",
  "datamodel": Array [
    "datamodel.graphql",
  ],
  "schema": "schemas/database.graphql",
  "secret": "some-secret",
  "service": "jj",
  "stage": "dev",
}
`;

exports[`graphcool definition load yml with injected env var 2`] = `
Array [
  "some-secret",
]
`;

exports[`graphcool definition load yml with secret and env var 1`] = `
Object {
  "cluster": "local",
  "datamodel": Array [
    "datamodel.graphql",
  ],
  "schema": "schemas/database.graphql",
  "secret": "this-is-a-long-secret",
  "service": "jj",
  "stage": "dev",
}
`;

exports[`graphcool definition load yml with secret and env var in .env 1`] = `
Object {
  "cluster": "local",
  "datamodel": Array [
    "datamodel.graphql",
  ],
  "schema": "schemas/database.graphql",
  "secret": "this-is-very-secret,and-comma,seperated",
  "service": "jj",
  "stage": "dev",
}
`;

exports[`graphcool definition load yml with secret and env var in .env 2`] = `
Array [
  "this-is-very-secret",
  "and-comma",
  "seperated",
]
`;

exports[`graphcool definition throw when no secret or disable auth provided 1`] = `[Error: Please either provide a secret in your graphcool.yml or disableAuth: true]`;

exports[`graphcool definition throws when stages key apparent 1`] = `
[Error: Invalid graphcool.yml file
graphcool.yml should NOT have a "stages" property anymore. Stages are now just provided as CLI args.
Read more here: https://goo.gl/SUD5i5]
`;
